--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.database-platform=org.hibernate.community.dialect.SQLiteDialect
 spring.jpa.hibernate.ddl-auto=update
 
-//=spring.datasource.url=jdbc:sqlite:carrental.sqlite
+spring.datasource.url=jdbc:sqlite:ivr.sqlite
 spring.datasource.driver-class-name=org.sqlite.JDBC
 
 spring.datasource.username=admin
